syntax = "proto3";

option csharp_namespace = "GrpcService";

service GameTransactionGrpcService {
  rpc CreateGameTransaction (GameTransactionRequest) returns (GameTransactionResponse);
  rpc GetGameTransactions (GameTransactionRequest) returns (GameTransactionResponse);
  rpc UpdateGameTransaction (GameTransactionRequest) returns (GameTransactionResponse);
  rpc DeleteGameTransaction (GameTransactionRequest) returns (GameTransactionResponse);
}

message GameTransactionRequest {
  string Id = 1;
  string SenderUserId = 2;
  string ReseiverUserId = 3;
  double Amount = 4;
  string TransactionDate = 5;
}
message GameTransaction {
  string Id = 1;
  string SenderUserId = 2;
  string ReseiverUserId = 3;
  double Amount = 4;
  string TransactionDate = 5;
}

message GameTransactionResponse {
  bool success = 1;
  GameTransaction gameTransaction = 2;
}
